syntax = "proto3";

package com.github.dodo_cli.dodo_core.api.v1alpha1;

option go_package = "github.com/dodo-cli/dodo-core/api/v1alpha1";

message PluginInfo {
  string name = 1;
  string version = 2;
}

message GetStreamingConnectionRequest {
}

message GetStreamingConnectionResponse {
  string url = 1;
}
