syntax = "proto3";

package com.wabenet.dodo.core.v1alpha4;

option go_package = "github.com/wabenet/dodo-core/api/v1alpha4";

import "google/protobuf/empty.proto";
import "api/v1alpha4/plugin.proto";
import "api/v1alpha4/backdrop.proto";

service ConfigurationPlugin {
  rpc GetPluginInfo(google.protobuf.Empty) returns (com.wabenet.dodo.core.v1alpha4.PluginInfo);
  rpc InitPlugin(google.protobuf.Empty) returns (com.wabenet.dodo.core.v1alpha4.InitPluginResponse);
  rpc ResetPlugin(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc ListBackdrops(google.protobuf.Empty) returns (ListBackdropsResponse);
  rpc GetBackdrop(GetBackdropRequest) returns (com.wabenet.dodo.core.v1alpha4.Backdrop);
}

message ListBackdropsResponse {
  repeated com.wabenet.dodo.core.v1alpha4.Backdrop backdrops = 1;
}

message GetBackdropRequest {
  string alias = 1;
}
